[gd_scene load_steps=7 format=2]

[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/SliderStandard/SliderStandard.gd" type="Script" id=1]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/TextEditStandard/Assets/TextEditStandard_SideBorder.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/TextEditStandard/Assets/TextEditStandard_FillBackground.png" type="Texture" id=3]
[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/TextEditStandard/TextEditStandard.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[node name="SliderStandard" type="MarginContainer"]
margin_right = 166.0
margin_bottom = 72.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 166.0
margin_bottom = 72.0
mouse_filter = 2
texture = ExtResource( 3 )
stretch_mode = 2

[node name="LeftBorder" type="TextureRect" parent="."]
margin_right = 3.0
margin_bottom = 72.0
mouse_filter = 2
size_flags_horizontal = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="RightBorder" type="TextureRect" parent="."]
margin_left = 163.0
margin_right = 166.0
margin_bottom = 72.0
mouse_filter = 2
size_flags_horizontal = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="BottomBorder" type="TextureRect" parent="."]
margin_top = 69.0
margin_right = 166.0
margin_bottom = 72.0
mouse_filter = 2
size_flags_vertical = 10
texture = ExtResource( 2 )
stretch_mode = 2

[node name="TopBorder" type="TextureRect" parent="."]
margin_right = 166.0
margin_bottom = 3.0
mouse_filter = 2
size_flags_vertical = 2
texture = ExtResource( 2 )
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 166.0
margin_bottom = 72.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 160.0
margin_bottom = 66.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 154.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Name"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 21.0
margin_right = 154.0
margin_bottom = 60.0

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 11.0
margin_right = 100.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="TextEditStandard" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 104.0
margin_right = 154.0
margin_bottom = 39.0
rect_min_size = Vector2( 50, 0 )
size_flags_horizontal = 0
only_allow_int_inputs = true
allow_edits = false

[connection signal="value_changed" from="MarginContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
